Fixed Typo in about

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <ul>
       <li>I'm a self taught adult, I had to grow up on my own.</li>
       <li>I once ate so much sour stuff my tongue bled, it was crazy yo.</li>
-      <li>I recently got engaged to the most awesome person in thwe world.</li>
+      <li>I recently got engaged to the most awesome person in the world.</li>
     </ul>
   </body>
 </html>
